--- a/template/iCMS/user/home.htm
+++ b/template/iCMS/user/home.htm
@@ -99,6 +99,8 @@
                 <a href="javascript:;" data-param='{"do":"favorite"}' class="iCMS-article-do" title="收藏"><i class="icon-heart"></i></a>
               </div>
             </li>
+            <!--{iCMSelse}-->
+            <li class="clearfix">暂无内容</li>
             <!--{/iCMS}-->
           </ul>
         </div>
