--- a/app/ui/common/iCMS-6.0.0.css
+++ b/app/ui/common/iCMS-6.0.0.css
@@ -59,7 +59,8 @@ a.noneline { text-decoration: none !important; }
 .iPHP-msg .d-content .btn-group { position: absolute; }
 .iPHP-msg .d-content { color: #222 }
 /* tooltip */
-.tooltip-inner { max-width: 760px; text-align: left !important; font-size: 14px; }
+.tooltip { max-width:inherit;font-size: 14px;}
+.tooltip-inner {max-width:inherit !important;text-align: left !important; font-size: 14px; }
 .tooltip-inner hr, .d-content .iPHP-msg .label hr { margin: 10px 0px; border-bottom: none; }
 /* modal */
 .modal { z-index: 9999 !important; margin: 0px !important; }
