--- a/template/iCMS/public.ui.htm
+++ b/template/iCMS/public.ui.htm
@@ -20,6 +20,7 @@
 <script src="<!--{$iCMS.UI}-->/jquery.poshytip.min.js"></script>
 <script src="<!--{$iCMS.UI}-->/iCMS-6.0.0.js"></script>
 <script src="<!--{$site.urls.ui}-->/iCMS-6.0.0.js"></script>
+<script src="<!--{$site.urls.ui}-->/iCMS.login-6.0.0.js"></script>
 <script>
 window.iCMS.init({
 	API:"<!--{iCMS:router url='/api'}-->",
