--- a/template/iCMS/user/register.close.htm
+++ b/template/iCMS/user/register.close.htm
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Warning! 系统已经关闭注册功能!</title>
     <!--{iCMS:public:ui}-->
-    <link rel="stylesheet" href="<!--{$site.urls.ui}-->/loginreg.css" type="text/css" />
+    <link rel="stylesheet" href="<!--{$site.urls.ui}-->/iCMS.loginreg-6.0.0.css" type="text/css" />
   </head>
   <body>
     <div id="body" class="register_wrap">
